# calibtools

./: .gitignore  .gitmodules  README.md  pyproject.toml
calibtools/calib_res_utils/: calib-g3.yaml  parse.py
calibtools/camera/: calib_K_D.py  charuco.yaml  common.py
calibtools/file_utils/: np_to_cv_yaml.py  time_align.py
calibtools/img_utils/: fish_yuv2jpg.py  lidar_project_img.py  side_cam_yuv2jpg.py  undist_img.py
calibtools/lidar2camera/: calib_lidar2camera.py  lidar2camera_manual.py
calibtools/lidar2camera/data/: img_corners.yaml  pcd_cam_corners.yaml  pcd_corners.yaml
calibtools/log/: log_utils.py
calibtools/opt_utils/: opt.py  opt_3d_2d.py
data/: calib.yaml
data/bev-f800/data/800/un_1718694629/: corners.yaml
data/bev-f800/data/800/un_1718694956/: corners.yaml
data/bev-f800/data/800/un_1718695040/: corners.yaml
data/bev-f800/data/ffish/1718694636/: corners.yaml
data/bev-f800/data/ffish/1718694950/: corners.yaml
data/bev-f800/data/ffish/1718695043/: corners.yaml
data/bev-fish/b_undist/: corners.yaml
data/bev-fish/f_undist/: corners.yaml
data/bev-fish/l/: corners.yaml
data/bev-fish/l_undist/: corners.yaml
data/lidar2gnss/: 2024-06-17-14-31-38.txt  lidar-poses.txt
log/: latest_list
python/: bev.py  calib.py  camera_intrinsic.py  lidar2gnss.py  split_four_png.py
src/in-cam/: CMakeLists.txt  package.xml
src/in-cam/src/: form.cpp  form.h  form.ui  main.cpp
src/three-plane-points/: CMakeLists.txt  main.cpp
