[tool.poetry]
name = "calibtools"
version = "0.1.0"
description = "calib common sensors"
authors = ["frank <frankjanemm@gmail.com>"]
readme = "README.md"
packages = [{include = "calibtools"}]

[tool.poetry.dependencies]
python = "~3.8.17"
opencv-python = "3.4.18.65"
opencv-contrib-python = "3.4.18.65"
loguru = "^0.7.2"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
calib_camera_charuco = "calibtools.camera.calib_K_D:calib_camera_charuco"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
