[tool.poetry]
name = "calibtools"
version = "0.1.0"
description = "calib common sensors"
authors = ["frank <frankjanemm@gmail.com>"]
readme = "README.md"
packages = [{include = "calibtools"}]

[tool.poetry.dependencies]
python = "~3.8.17"
opencv-python = "3.4.18.65"
opencv-contrib-python = "3.4.18.65"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
torch = {version = "1.12.1+cu113", source = "pytorch_cu11_3"}
torchvision = {version = "0.13.1+cu113", source = "pytorch_cu11_3"}
torchaudio = {version = "0.12.1", source = "pytorch_cu11_3"}

[tool.poetry.scripts]
calib_camera_charuco = "calibtools.camera.calib_K_D:calib_camera_charuco"


[[tool.poetry.source]]
name = "pytorch_cu11_3"
url = "https://download.pytorch.org/whl/cu113"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
